BAP-1553, BAP-1552, BAP-1551, BAP-1549: Css Fixes  - Increased header z-index  - Fix for simple search results

--- a/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -425,7 +425,7 @@ body .select2-container {
     clear: both;
     background: #323b45;
     position: relative;
-    z-index: 120;
+    z-index: 900;
     .divider-vertical {
       border:none;
       margin:9px 6px;
@@ -731,6 +731,9 @@ header {
           box-shadow: none !important;
           background: #fff;
           color: #444;
+        }
+        .header-search-focused #search-dropdown{
+          display: block;
         }
         #search-bar-button {
           width:85px;
